--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,14 +11,31 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <!--Google Fonts-->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Bangers|Boogaloo" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <!--My CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Hello, world!</title>
+    <title>Stranger Things Friend Finder</title>
 </head>
 
-<body>
-    <h1>Hello, world!</h1>
+<body id="homeBody">
+    <!-- <div  class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Welcome to Hawkins, Indiana</h1>
+                </div>
+              </div> -->
+    <div class="homeContainer" id="strangeTitle">
+        <h1 class="title" id="topLine">THE WORLD IS TURNING</h1>
+        <h1 class="title upsideDown">UPSIDE DOWN</h1>
+        <h2>IT ONLY GETS STRANGER</h2>
+        <h3>WHO IS YOUR PERFECT MATCH FOR THE UPSIDE DOWN?</h3>
+        <a href="/survey" class="upsideDown btn btn-default"> ENTER</a>
+    </div>
+
+    <footer>
+        <div class="container" id="footer">
+            <a id="links" href="/api/friends">API Friends</a>
+        </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -28,7 +45,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-        <script src="./assets/javascript/app.js" type="text/javascript"></script>
+    <script src="./assets/javascript/app.js" type="text/javascript"></script>
 </body>
 
 </html>
