--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <!--Google Fonts-->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Bangers|Boogaloo" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <!--My CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Hello, world!</title>
+    <title>Stranger Things Friend Finder</title>
 </head>
 
-<body>
+<body id="surveyBody">
     <div class="container">
         <form id="survey">
             <div class="form-group">
@@ -188,7 +188,7 @@
         </div>
         <div class="modal-body" id>
           <h1 id= "matchName"> Your Match!</h1>
-          <img id= "matchPic">
+          <img id= "matchPic" src= "./app/public/assets/images/eleven.jpg">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -207,31 +207,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script  src="assets/javascript/app.js" type="text/javascript"></script>
-    <!-- <script>
-    $("#survey").on("submit", function (event) {
-    event.preventDefault();
-    var userInput = {
-        name: $("#name").val(),
-        photo: $("#photo").val(),
-        scores: [$("#q1").val(),
-            $("#q2").val(), 
-            $("#q3").val(), 
-            $("#q4").val(), 
-            $("#q5").val(), 
-            $("#q6").val(), 
-            $("#q7").val(), 
-            $("#q8").val(), 
-            $("#q9").val(), 
-            $("#q10").val()
-        ]
-    };
-    $.post("/api/friends", userInput, function(data){
-        $("#matchName").text(data.name);
-        $("#matchPic").attr("src", data.photo);
-        $('#friendsModal').modal('toggle')
-    });
-    
-})</script> -->
 </body>
 
 </html>
