messing around too much with my footer- get going on survey pagegit add -A

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -18,11 +18,6 @@
 </head>
 
 <body id="homeBody">
-    <!-- <div  class="jumbotron jumbotron-fluid">
-                <div class="container">
-                  <h1 class="display-4">Welcome to Hawkins, Indiana</h1>
-                </div>
-              </div> -->
     <div class="homeContainer" id="strangeTitle">
         <h1 class="title" id="topLine">THE WORLD IS TURNING</h1>
         <h1 class="title upsideDown">UPSIDE DOWN</h1>
@@ -32,9 +27,13 @@
     </div>
 
     <footer>
-    
-            <a id="links" href="/api/friends">API Friends</a>
-
+        <span>
+            <a href="https://github.com/awilliams62090/Friend-Finder" target="_blank" class="footer spanLeft">
+                © 2018 Alyssa Williams <img src="assets/images/GitHub-Mark-Light-32px.png" alt="github">
+            </a>
+            <a class="spanRight" href="/survey"> Survey</a>
+            <a class="spanRight" href="/api/friends"> API Friends</a>
+        </span>
     </footer>
 
     <!-- Optional JavaScript -->
