Adding more styling

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -27,13 +27,22 @@
     </div>
 
     <footer>
-        <span>
-            <a href="https://github.com/awilliams62090/Friend-Finder" target="_blank" class="footer spanLeft">
-                © 2018 Alyssa Williams <img src="assets/images/GitHub-Mark-Light-32px.png" alt="github">
-            </a>
-            <a class="spanRight" href="/survey"> Survey</a>
-            <a class="spanRight" href="/api/friends"> API Friends</a>
-        </span>
+        <div class="container-fluid">
+            <div class="row">
+              <div class="col">
+                <a href="https://github.com/awilliams62090/Friend-Finder" target="_blank" class="footer spanLeft">
+                    © 2018 Alyssa Williams <img src="assets/images/GitHub-Mark-Light-32px.png" alt="github">
+                </a>
+              </div>
+              <div class="col">
+              </div>
+              <div class="col">
+                <a class="spanRight" href="/survey">  Survey </a>
+                <a class="spanRight" href="/api/friends"> API </a>
+                <a class="spanRight" href="/api/user"> USER API </a>
+              </div>
+            </div>
+          </div>
     </footer>
 
     <!-- Optional JavaScript -->
