--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -203,11 +203,18 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <h1 id="matchName"> Your Match!</h1>
-                    <img id="matchPic" src="./app/public/assets/images/eleven.jpg">
+                    <div class="row">
+                        <div class="col"></div>
+                        <div class="col">
+                            <h1 id="matchName"> Your Match!</h1>
+                            <img id="matchPic" src="./app/public/assets/images/eleven.jpg">
+                        </div>
+                        <div class="col"></div>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                  <a class="upsideDown" href="/survey"><button id="playAgain" type="button" class="btn btn-secondary" data-dismiss="modal">Try Again</button></a>
+                    <a class="upsideDown" href="/survey"><button id="playAgain" type="button" class="btn btn-secondary"
+                            data-dismiss="modal">Try Again</button></a>
                 </div>
             </div>
         </div>
